// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssignDifferentProfileAction renders 1`] = `
<UserActionWrapper>
  <DropdownMenu
    disabled={false}
    title={
      <Tooltip
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="top"
        title={null}
      >
        <Button
          data-test-id="claim-multiple"
        >
          <IconText
            icon={<ForwardRef(FileDoneOutlined) />}
            text="claim"
          />
        </Button>
      </Tooltip>
    }
  >
    <MenuItem
      data-test-id="assign-self"
      key="assign-self"
      onClick={[Function]}
    >
      Move to my profile
    </MenuItem>
  </DropdownMenu>
</UserActionWrapper>
`;

exports[`AssignDifferentProfileAction renders disabled 1`] = `
<UserActionWrapper>
  <DropdownMenu
    disabled={true}
    title={
      <Tooltip
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="top"
        title="Please select the papers you want to claim or remove from the profile."
      >
        <Button
          data-test-id="claim-multiple"
        >
          <IconText
            icon={<ForwardRef(FileDoneOutlined) />}
            text="claim"
          />
        </Button>
      </Tooltip>
    }
  >
    <MenuItem
      data-test-id="assign-self"
      key="assign-self"
      onClick={[Function]}
    >
      Move to my profile
    </MenuItem>
  </DropdownMenu>
</UserActionWrapper>
`;

exports[`AssignDifferentProfileAction renders with claimingUnclaimedPapersDisabled 1`] = `
<UserActionWrapper>
  <DropdownMenu
    disabled={true}
    title={
      <Tooltip
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="top"
        title="Please select the papers you want to claim or remove from the profile."
      >
        <Button
          data-test-id="claim-multiple"
        >
          <IconText
            icon={<ForwardRef(FileDoneOutlined) />}
            text="claim"
          />
        </Button>
      </Tooltip>
    }
  >
    <MenuItem
      data-test-id="assign-self"
      key="assign-self"
      onClick={[Function]}
    >
      Move to my profile
    </MenuItem>
  </DropdownMenu>
</UserActionWrapper>
`;
